fix: update distribution tar name to include .tar.gz extension

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,7 @@ jobs:
           VERSION=${PACKAGE_VERSION}-${BRANCH_NAME}+${DATE}.${SHORT_SHA}
           VERSIONED_DIST_NAME=dist-${VERSION}
 
-          echo "DIST_TAR_NAME=${VERSIONED_DIST_NAME}.tar" >> "$GITHUB_OUTPUT"
+          echo "DIST_TAR_NAME=${VERSIONED_DIST_NAME}.tar.gz" >> "$GITHUB_OUTPUT"
           echo "VERSION=${VERSION}" >> "$GITHUB_OUTPUT"
           echo "VERSIONED_DIST_NAME=${VERSIONED_DIST_NAME}" >> "$GITHUB_OUTPUT"
 
