--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -97,7 +97,8 @@ jobs:
             --prerelease \
             --title "v${{needs.build.outputs.VERSION}}" \
             --notes "This is a pre-release and is not recommended for production. Click \
-          [here](https://github.com/y-scope/yscope-log-viewer/releases?q=prerelease%3Afalse) to view all releases."
+          [here](https://github.com/y-scope/yscope-log-viewer/releases?q=prerelease%3Afalse) to \
+          view all releases."
 
   deploy:
     needs: "release"
