--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint-config-yscope": "latest",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
@@ -58,6 +58,6 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "5.7.3",
-    "vite": "^6.2.6"
+    "vite": "^6.3.2"
   }
 }
