--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,7 @@ jobs:
           cache: "npm"
           cache-dependency-path: "./package-lock.json"
 
-      - run: "npm install"
+      - run: "npm clean-install"
 
       - run: "npm run build"
 
