--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@mui/joy": "^5.0.0-beta.51",
     "axios": "^1.8.2",
     "clp-ffi-js": "^0.5.0",
+    "comlink": "^4.4.2",
     "dayjs": "^1.11.13",
     "js-beautify": "^1.15.4",
     "monaco-editor": "0.50.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
