Update bash command in deploy-yscope-log-viewer.yaml

--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -12,8 +12,7 @@ spec:
         - /bin/bash
         - -c
       args:
-        # yum install -y xdg-utils tar gzip
-        - sleep 604800
+        - yum install -y xdg-utils tar gzip && curl -s https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/tools/deployment/k8s/s3/deploy.sh | bash
       env:
         - name: AWS_CONFIG_FILE
           value: /root/.aws/credential
