Update auth credential path

--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -15,7 +15,7 @@ spec:
         - yum install -y xdg-utils tar gzip jq && curl -s https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/tools/deployment/k8s/s3/deploy.sh | bash
       env:
         - name: AWS_CONFIG_FILE
-          value: /aws/credential
+          value: /root/.aws/credential
         - name: AWS_ENDPOINT_URL
           value: http://minio:9091
         - name: LOG_VIEWER_BUCKET
@@ -24,7 +24,7 @@ spec:
           value: latest
       volumeMounts:
         - name: secret-volume
-          mountPath: "/aws/"
+          mountPath: "/home/.aws"
       imagePullPolicy: IfNotPresent
   volumes:
     - name: secret-volume
