--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -2,17 +2,24 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    app: yscope-log-viewer-deployment
-  name: yscope-log-viewer-deployment
+    app: deploy-yscope-log-viewer
+  name: deploy-yscope-log-viewer
 spec:
   containers:
-    - name: yscope-log-viewer-deployment
+    # Dummy container which do nothing but sleep
+    - name: dummy
+      image: busybox
+      command: [ "sh", "-c", "while true; do sleep 3600; done" ]
+  initContainers:
+    # Container which performs deployment once only
+    # To inspect logs, use the following command; kubectl logs <pod> -c <container>
+    - name: deploy-yscope-log-viewer
       image: amazon/aws-cli:latest
       command:
         - /bin/bash
         - -c
       args:
-        - yum install -y tar jq && curl -s https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/tools/deployment/k8s/s3/deploy.sh | bash
+        - yum install -y gzip jq tar && curl -s https://raw.githubusercontent.com/y-scope/yscope-log-viewer/027be84b9ef83459b2a3185e8b295e3937656610/tools/deployment/k8s/s3/deploy.sh | bash
       env:
         - name: AWS_ENDPOINT_URL
           value: http://minio:9091
@@ -22,7 +29,7 @@ spec:
           value: latest
       volumeMounts:
         - name: aws-credentials-volume
-          mountPath: "/home/.aws"
+          mountPath: "/root/.aws"
       imagePullPolicy: IfNotPresent
   volumes:
     - name: aws-credentials-volume
