--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  labels:
-    app: deploy-yscope-log-viewer
   name: deploy-yscope-log-viewer
 spec:
   containers:
-    # Dummy container which do nothing but sleep
+    # Dummy container which does nothing but sleep
     - name: dummy
       image: busybox
       command: [ "sh", "-c", "while true; do sleep 3600; done" ]
