--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -23,7 +23,7 @@ spec:
           value: http://minio:9091
         - name: LOG_VIEWER_BUCKET
           value: log-viewer
-        - name: TAG_NAME
+        - name: LOG_VIEWER_RELEASE_TAG
           value: latest
       volumeMounts:
         - name: aws-credentials-volume
