--- a/tools/deployment/k8s/s3/sample-resource-files/aws-credentials.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/aws-credentials.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
-kind: Secret
+apiVersion: "v1"
+kind: "Secret"
 metadata:
-  name: aws-credentials
-type: Opaque
+  name: "aws-credentials"
+type: "Opaque"
 data:
-  credentials: W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gbWluaW9hZG1pbgphd3Nfc2VjcmV0X2FjY2Vzc19rZXkgPSBtaW5pb2FkbWluCg==
+  credentials: "W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gbWluaW9hZG1pbgphd3Nfc2VjcmV0X2FjY2Vzc19rZXk\
+  gPSBtaW5pb2FkbWluCg=="
