--- a/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/k8s/s3/sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -1,35 +1,38 @@
-apiVersion: v1
-kind: Pod
+apiVersion: "v1"
+kind: "Pod"
 metadata:
-  name: deploy-yscope-log-viewer
+  name: "deploy-yscope-log-viewer"
 spec:
   containers:
     # Dummy container which does nothing but sleep
-    - name: dummy
-      image: busybox
-      command: [ "sh", "-c", "while true; do sleep 3600; done" ]
+    - name: "dummy"
+      image: "busybox"
+      command: ["sh", "-c", "while true; do sleep 3600; done"]
   initContainers:
     # Container which performs deployment once only
     # To inspect logs, use the following command; kubectl logs <pod> -c <container>
-    - name: deploy-yscope-log-viewer
-      image: amazon/aws-cli:latest
+    - name: "deploy-yscope-log-viewer"
+      image: "amazon/aws-cli:latest"
       command:
-        - /bin/bash
-        - -c
+        - "/bin/bash"
+        - "-c"
       args:
-        - yum install -y gzip jq tar && curl -s https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/tools/deployment/k8s/s3/deploy.sh | bash
+        - "yum install -y gzip jq tar \
+        && curl -s \
+        https://raw.githubusercontent.com/jackluo923/yscope-log-viewer/refs/heads\
+        /basic-k8s-s3-deployment/tools/deployment/k8s/s3/deploy.sh | bash"
       env:
-        - name: AWS_ENDPOINT_URL
-          value: http://minio:9091
-        - name: LOG_VIEWER_BUCKET
-          value: log-viewer
-        - name: LOG_VIEWER_RELEASE_TAG
-          value: latest
+        - name: "AWS_ENDPOINT_URL"
+          value: "http://minio:9091"
+        - name: "LOG_VIEWER_BUCKET"
+          value: "log-viewer"
+        - name: "LOG_VIEWER_RELEASE_TAG"
+          value: "latest"
       volumeMounts:
-        - name: aws-credentials-volume
+        - name: "aws-credentials-volume"
           mountPath: "/root/.aws"
-      imagePullPolicy: IfNotPresent
+      imagePullPolicy: "IfNotPresent"
   volumes:
-    - name: aws-credentials-volume
+    - name: "aws-credentials-volume"
       secret:
-        secretName: aws-credentials
+        secretName: "aws-credentials"
