--- a/tools/deployment/s3/k8s-sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/s3/k8s-sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -1,38 +1,36 @@
-apiVersion: "v1"
-kind: "Pod"
+apiVersion: "batch/v1"
+kind: "Job"
 metadata:
   name: "deploy-yscope-log-viewer"
 spec:
-  containers:
-    # Dummy container which does nothing but sleep
-    - name: "dummy"
-      image: "busybox"
-      command: ["sh", "-c", "while true; do sleep 3600; done"]
-  initContainers:
-    # Container to deploy the log viewer. To inspect logs, use the following command:
-    # `kubectl logs deploy-yscope-log-viewer -c deploy-yscope-log-viewer`
-    - name: "deploy-yscope-log-viewer"
-      image: "amazon/aws-cli:latest"
-      command:
-        - "/bin/bash"
-        - "-c"
-      args:
-        - "yum install -y gzip jq tar \
-        && curl -s \
-        https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/deployment/s3\
-        /deploy.sh | bash"
-      env:
-        - name: "AWS_ENDPOINT_URL"
-          value: "http://minio:9000"
-        - name: "LOG_VIEWER_BUCKET"
-          value: "log-viewer"
-        - name: "LOG_VIEWER_RELEASE_TAG"
-          value: "latest"
-      volumeMounts:
+  template:
+    spec:
+      containers:
+        # Container to deploy the log viewer. To inspect logs, use the following command:
+        # `kubectl logs job.batch/deploy-yscope-log-viewer`
+        - name: "deploy-yscope-log-viewer"
+          image: "amazon/aws-cli:latest"
+          command:
+            - "/bin/bash"
+            - "-c"
+          args:
+            - "yum install -y gzip jq tar \
+            && curl -s \
+            https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/deployment\
+            /s3/deploy.sh | bash"
+          env:
+            - name: "AWS_ENDPOINT_URL"
+              value: "http://minio:9000"
+            - name: "LOG_VIEWER_BUCKET"
+              value: "log-viewer"
+            - name: "LOG_VIEWER_RELEASE_TAG"
+              value: "latest"
+          volumeMounts:
+            - name: "aws-credentials-volume"
+              mountPath: "/root/.aws"
+          imagePullPolicy: "IfNotPresent"
+      restartPolicy: "Never"
+      volumes:
         - name: "aws-credentials-volume"
-          mountPath: "/root/.aws"
-      imagePullPolicy: "IfNotPresent"
-  volumes:
-    - name: "aws-credentials-volume"
-      secret:
-        secretName: "aws-credentials"
+          secret:
+            secretName: "aws-credentials"
