fix: Correct deploy.sh's path in deploy-yscope-log-viewer.yaml (fixes #303).

--- a/tools/deployment/s3/k8s-sample-resource-files/deploy-yscope-log-viewer.yaml
+++ b/tools/deployment/s3/k8s-sample-resource-files/deploy-yscope-log-viewer.yaml
@@ -16,8 +16,8 @@ spec:
           args:
             - "yum install -y gzip jq tar \
             && curl -s \
-            https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/deployment\
-            /s3/deploy.sh | bash"
+            https://raw.githubusercontent.com/y-scope/yscope-log-viewer/refs/heads/main/tools/\
+            deployment/s3/deploy.sh | bash"
           env:
             - name: "AWS_ENDPOINT_URL"
               value: "http://minio:9000"
