chore(lint): Lock action versions and enable credential persistence for private repo access.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,11 +25,12 @@ jobs:
       STYLELINT_MATCHER_OWNER: "stylelint"
       STYLELINT_MATCHER_PATH: "./.github/problem-matchers/stylelint.json"
     steps:
-      - uses: "actions/checkout@v4"
+      - uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683"
         with:
-          persist-credentials: false
+          # To gain access to the private-yscope-log-viewer repository.
+          persist-credentials: true
           submodules: "recursive"
-      - uses: "actions/setup-node@v4"
+      - uses: "actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020"
         with:
           node-version: 22
       - run: "npm clean-install"
