--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/joy": "^5.0.0-beta.52",
     "axios": "^1.8.2",
-    "clp-ffi-js": "^0.5.0",
+    "clp-ffi-js": "^0.5.1",
     "comlink": "^4.4.2",
     "dayjs": "^1.11.13",
     "js-beautify": "^1.15.4",
     "monaco-editor": "0.50.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-json-tree": "^0.20.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
