--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 includes:
   docs: "docs/tasks.yaml"
-  utils: "tools/yscope-dev-utils/taskfiles/utils.yml"
+  utils: "tools/yscope-dev-utils/taskfiles/tests.yaml"
 
 vars:
   G_BUILD_DIR: "{{.ROOT_DIR}}/build"
