Update workflow triggers to include additional paths for documentation and tools; Also add check for push

--- a/.github/workflows/log-viewer-docs.yaml
+++ b/.github/workflows/log-viewer-docs.yaml
@@ -3,8 +3,18 @@ name: "docs"
 on:
   pull_request:
     paths:
-        - "docs/**"
+        - docs/**/*
+        - .github/workflows/log-viewer-docs.yaml
+        - .gitmodules
+        - taskfile.yaml
+        - tools/**/*
   push:
+    paths:
+      - docs/**/*
+      - .github/workflows/log-viewer-docs.yaml
+      - .gitmodules
+      - taskfile.yaml
+      - tools/**/*
   schedule:
     # Run daily at 00:15 UTC (the 15 is to avoid periods of high load)
     - cron: "15 0 * * *"
