--- a/.github/workflows/log-viewer-docs.yaml
+++ b/.github/workflows/log-viewer-docs.yaml
@@ -3,18 +3,20 @@ name: "docs"
 on:
   pull_request:
     paths:
-        - docs/**/*
-        - .github/workflows/log-viewer-docs.yaml
-        - .gitmodules
-        - taskfile.yaml
-        - tools/**/*
+      - "docs/**"
+      - ".github/workflows/log-viewer-docs.yaml"
+      - ".gitmodules"
+      - "taskfile.yaml"
+      - "tools/scripts/**"
+      - "tools/yscope-dev-utils"
   push:
     paths:
-      - docs/**/*
-      - .github/workflows/log-viewer-docs.yaml
-      - .gitmodules
-      - taskfile.yaml
-      - tools/**/*
+      - "docs/**"
+      - ".github/workflows/log-viewer-docs.yaml"
+      - ".gitmodules"
+      - "taskfile.yaml"
+      - "tools/scripts/**"
+      - "tools/yscope-dev-utils"
   schedule:
     # Run daily at 00:15 UTC (the 15 is to avoid periods of high load)
     - cron: "15 0 * * *"
