change path variable name

--- a/.github/workflows/log-viewer-docs.yaml
+++ b/.github/workflows/log-viewer-docs.yaml
@@ -2,7 +2,7 @@ name: "docs"
 
 on:
   pull_request:
-    paths: &docs_paths
+    paths: &monitored_paths
       - "docs/**"
       - ".github/workflows/log-viewer-docs.yaml"
       - ".gitmodules"
@@ -10,7 +10,7 @@ on:
       - "tools/scripts/**"
       - "tools/yscope-dev-utils"
   push:
-    paths: *docs_paths
+    paths: *monitored_paths
   schedule:
     # Run daily at 00:15 UTC (the 15 is to avoid periods of high load)
     - cron: "15 0 * * *"
