--- a/.github/workflows/log-viewer-docs.yaml
+++ b/.github/workflows/log-viewer-docs.yaml
@@ -2,7 +2,15 @@ name: "docs"
 
 on:
   pull_request:
+    paths: &monitored_paths
+      - "docs/**"
+      - ".github/workflows/log-viewer-docs.yaml"
+      - ".gitmodules"
+      - "taskfile.yaml"
+      - "tools/scripts/**"
+      - "tools/yscope-dev-utils"
   push:
+    paths: *monitored_paths
   schedule:
     # Run daily at 00:15 UTC (the 15 is to avoid periods of high load)
     - cron: "15 0 * * *"
