--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
-    "@bokuweb/zstd-wasm": "^0.0.27",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
@@ -40,6 +39,7 @@
     "monaco-editor": "0.50.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "zstddec": "^0.1.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
