chore: Update all dependencies and regenerate lock file; Resolve lint issues from `eslint-config-yscope@1.1.2`. (#398)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "npm run lint:check",
     "lint:check": "npm-run-all --sequential --continue-on-error lint:check:*",
     "lint:check:css": "stylelint src/**/*.css",
-    "lint:check:js": "eslint . --max-warnings 0",
+    "lint:check:js": "eslint . --max-warnings 0 --concurrency=auto",
     "lint:fix": "npm-run-all --parallel --continue-on-error \"lint:check:* -- --fix\"",
     "preview": "vite preview",
     "test": "jest"
@@ -28,39 +28,39 @@
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
     "@mui/joy": "^5.0.0-beta.52",
     "axios": "^1.12.2",
     "clp-ffi-js": "^0.6.1",
     "comlink": "^4.4.2",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "js-beautify": "^1.15.4",
-    "monaco-editor": "0.50.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zustand": "^5.0.4"
+    "monaco-editor": "0.54.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/js-beautify": "^1.14.3",
-    "@types/node": "^22.10.7",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "eslint-config-yscope": "latest",
-    "globals": "^15.14.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "@types/node": "^22.18.11",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint-config-yscope": "1.1.2",
+    "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "stylelint": "^16.20.0",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.25.0",
     "stylelint-config-clean-order": "^7.0.0",
-    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard": "^39.0.1",
     "stylelint-prettier": "^5.0.3",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "5.7.3",
-    "vite": "^6.3.6"
+    "typescript": "5.9.3",
+    "vite": "^7.1.10"
   }
 }
